health4u/static/health4u.css
:root {
    --main-theme-color: #255557;
    --color-2: #7B7E81;
    --color-3: #727072;
    --color-4: #AF929D;
    --color-5: #D2D6EF;
    --color-6: #55595D;
    --color-7: #c6c7c9;
    --hint-text-color: #989898;
    --background-color: #e8e8e8;
}

/* Color Initialization */
.main-color { color: var(--main-theme-color); }
.color-2 { color: var(--color-2); }
.color-3 { color: var(--color-3); }
.color-4 { color: var(--color-4); }
.color-5 { color: var(--color-5); }
.color-6 { color: var(--color-6); }
.color-7 { color: var(--color-7); }
.hint-text { color: var(--hint-text-color); }
.background-color { color: var(--background-color); }

/* Background Color Initialization */
.main-color-bg { background-color: var(--main-theme-color); }
.color-2-bg { background-color: var(--color-2); }
.color-3-bg { background-color: var(--color-3); }
.color-4-bg { background-color: var(--color-4); }
.color-5-bg { background-color: var(--color-5); }
.color-6-bg { background-color: var(--color-6); }
.color-7-bg { background-color: var(--color-7); }
.hint-text-bg { background-color: var(--hint-text-color); }
.background-color-bg { background-color: var(--background-color); }

.with-border { border-color: var(--color-6); }

.rgba-opacity { color: rgba(255, 255, 255, 0.7); }

.rgba-opacity:hover { color: rgba(255, 255, 255, 1.0); }

/* Base */
body::after {
    content: '';
    display: block;
    min-height: 200px;
}

.nav-link-hover:hover {
    background-color: #19393b;
    height: 100%;
}

.back-to-top {
    display: none;
    cursor: pointer;
    z-index: 10000;
    position: fixed;
    padding: 12px 16px;
    bottom: 20px;
    right: 20px;
    font-size: 16px;
}

.back-to-top:hover {
    background-color: var(--main-theme-color);
}


/* Home */
.carousel-control-next-icon, .carousel-control-prev-icon {
    filter: invert(1);
}


/* Hospitals */
.rotate-icon {
    transform: rotate(0deg);
    transition: .3s transform ease-in-out;
    display: inline-block;
}

.collapsed .rotate-icon {
    transform: rotate(180deg);
}

.datepicker:read-only {
    cursor: pointer;
    background-color: #ffffff;
}


/* Covid-19 */


/* Contact Us */
.ic {
    margin-right: 4px;
    margin-top: 12px;
}


/* Log In, Sign Up */
.sign-card {
    max-width: 32em;
}

.or-bubble {
    font-weight: bold;
    padding: 0.5rem 0.7rem;
    border: 1px solid var(--color-7);
    border-radius: 50%;
    background-color: white;
}

.horizontal-line {
    border-top: 1px solid var(--color-7);
    flex-grow: 1;
    height: 0;
}

.social-buttons {
    display: flex;
    flex-wrap: wrap;
    min-width: 8rem;
    justify-content: space-evenly;
}

.contact-info-wrapper {
    display: grid;
    grid-template-columns: max-content max-content;
    grid-column-gap: 1.5rem;
    align-items: baseline;
}

